# zerotrust_proxy

./: README.md
SDPClient/: SDPClient  SDPClient.cpp  sdp_server  test_sdpServer.cpp
Test/: CMakeCache.txt  CMakeLists.txt  Makefile  SDP_Proxy.cpp  SDP_Proxy_log.txt  SPA.cpp  SPA.h  ca.csr  ca.key  client.csr  client.key  client2  client2.cpp  cmake_install.cmake  open_scap_test  server.crt  server.csr  server.key  test-suricata.cpp  test_client  test_client.cpp  test_sdpServer  test_sdpServer.cpp  test_sdpServer2  test_sdpServer2.cpp
Test/baseline/: KB.json  LinuxBaselineCheck.py  SDP_Proxy_BaseLine_Check.py  WinBaselineCheck.py  baseline_check  baseline_check.cpp  inventory.json  linux_baseline_check.sh  linux_res.json  vulmap.py  vuln_scan.sh  win2012_baseline_check.ps1
Test/baseline/linux/: LinuxBaselineCheck.py  linux_baseline_check.sh  linux_res.json  vuln_scan.sh
Test/baseline/windows/: KB.json  WinBaselineCheck.py  systeminfo.txt  win-inventory-vul.ps1  win_baseline_check.ps1  win_inventory_res.json  win_patch_vul.py  win_res.json
Test/communication/: SPA.cpp  SPA.h  SPA_Proxy.cpp  SPA_Proxy.h  TLS_Proxy.cpp  TLS_Proxy.h  infoAnalyzer.cpp  infoAnalyzer.h
Test/keys/: ca.crt  ca.key  client.crt  client.csr  client.key  client_HB_Client_1145.crt  client_HB_Client_1145.csr  client_HB_Client_1145.key  client_HB_Client_1145_pkcs8.key  client_pkcs8.key  gateway.crt  gateway.csr  gateway.key  gateway_pkcs8.key  server.crt  server.csr  server.key  server_pkcs8.key
Test/mykeys/: ca.crt  client.crt
Test/open_scap_test/: open_scap_test  open_scap_test.cpp  open_scap_test.h  report.html
Test/open_scap_test/content/: ssg-firefox-cpe-dictionary.xml  ssg-firefox-cpe-oval.xml  ssg-firefox-ds-1.2.xml  ssg-firefox-ds.xml  ssg-firefox-ocil.xml  ssg-firefox-oval.xml  ssg-firefox-xccdf.xml  ssg-rhel6-cpe-dictionary.xml  ssg-rhel6-cpe-oval.xml  ssg-rhel6-ocil.xml  ssg-rhel6-oval.xml  ssg-rhel7-cpe-dictionary.xml  ssg-rhel7-cpe-oval.xml  ssg-rhel7-ocil.xml  ssg-rhel8-cpe-dictionary.xml  ssg-rhel8-cpe-oval.xml  ssg-rhel8-ocil.xml
Test/src/: SDP_security_Proxy.cpp  SDP_security_Proxy.h  SPA_Proxy  SPA_Proxy.cpp  SPA_Proxy.h  TLS_Proxy.cpp  TLS_Proxy.h  base64.cpp  base64.h  logger.c  logger.h  main.cpp  proxy.c  proxy.h  util.cpp  util.h
